Remove 'Literatur' headline from main.tex

--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -684,6 +684,6 @@ Wir hoffen, dass unsere Software den Weg in den Produktiveinsatz finden wird, wa
 
 \section*{Quellen}
   \printbibliography[%
-    heading=bibintoc, % (bibintoc, bibnumbered)
+    heading=none, % (none, bibintoc, bibnumbered)
   ]
 \end{document}
